--- a/OauthLib/build.gradle
+++ b/OauthLib/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 def appPropertyFilePath = "${project.rootDir}/oauthkey.properties";
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 23
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:23.1.0'
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'oauth.signpost:signpost-core:1.2.1.2'
 }
